--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ os:
 
 d:
  - ldc-beta
+ - ldc-1.22.0
+ - ldc-1.21.0
  - ldc-1.20.1
  - ldc-1.19.0
  - ldc-1.18.0
@@ -24,6 +26,9 @@ d:
  - ldc-1.9.0
  - ldc-1.8.0
  - dmd-beta
+ - dmd-2.093.0
+ - dmd-2.092.1
+ - dmd-2.091.1
  - dmd-2.090.1
  - dmd-2.089.1
  - dmd-2.088.1
