--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ matrix:
    - d: dmd-2.080.1   # backend bug with optimizations
    - d: dmd-2.079.1   # codegen issues with optimizations
    - d: dmd-2.078.2   # codegen issues with optimizations
+   - d: dmd-2.089.1   # weird travis crash on Linux only, did not investigate
 
 script:
   - dub test --compiler=${DC}
