--- a/.travis.yml
+++ b/.travis.yml
@@ -57,11 +57,13 @@ matrix:
    - d: dmd-2.078.2   # codegen issues with optimizations
    - d: dmd-2.089.1   # weird travis crash on Linux only, did not investigate
 
+# Note: run 64-bit tests if (arch == amd64) || (compiler is LDC)
+# Note: run 32-bit tests on Linux x86 only
 script:
-  - dub test --compiler=${DC}
-  - dub test -b unittest-release --compiler=${DC}
-  - dub test -b unittest-inst --compiler=${DC}
-  - dub test -b unittest-release-inst --compiler=${DC}
+  - if [[ ${DC: -4} == "ldc2" || "$TRAVIS_CPU_ARCH" == "amd64" ]]; then dub test --compiler=${DC} ; fi
+  - if [[ ${DC: -4} == "ldc2" || "$TRAVIS_CPU_ARCH" == "amd64" ]]; then dub test -b unittest-release --compiler=${DC} ; fi
+  - if [[ ${DC: -4} == "ldc2" || "$TRAVIS_CPU_ARCH" == "amd64" ]]; then dub test -b unittest-inst --compiler=${DC} ; fi
+  - if [[ ${DC: -4} == "ldc2" || "$TRAVIS_CPU_ARCH" == "amd64" ]]; then dub test -b unittest-release-inst --compiler=${DC} ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_CPU_ARCH" == "amd64" ]]; then dub test --compiler=${DC} -a x86 ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_CPU_ARCH" == "amd64" ]]; then dub test -b unittest-release --compiler=${DC} -a x86 ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_CPU_ARCH" == "amd64" ]]; then dub test -b unittest-inst --compiler=${DC} -a x86 ; fi
