--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,32 @@ matrix:
    - d: dmd-2.079.1   # codegen issues with optimizations
    - d: dmd-2.078.2   # codegen issues with optimizations
    - d: dmd-2.089.1   # weird travis crash on Linux only, did not investigate
+   - d: dmd-beta
+     arch: arm64
+   - d: dmd-2.093.0
+     arch: arm64
+   - d: dmd-2.092.1
+     arch: arm64
+   - d: dmd-2.091.1
+     arch: arm64
+   - d: dmd-2.090.1
+     arch: arm64
+   - d: dmd-2.088.1
+     arch: arm64
+   - d: dmd-2.087.1
+     arch: arm64
+   - d: dmd-2.086.1
+     arch: arm64
+   - d: dmd-2.085.1
+     arch: arm64
+   - d: dmd-2.084.1
+     arch: arm64
+   - d: dmd-2.083.1
+     arch: arm64
+   - d: dmd-2.082.1
+     arch: arm64
+   - d: dmd-2.081.2
+     arch: arm64
 
 # Note: run 64-bit tests if (arch == amd64) || (compiler is LDC)
 # Note: run 32-bit tests on Linux x86 only
