--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -7,4 +7,5 @@ RUN curl -fsSLO https://github.com/ldc-developers/ldc/releases/download/v1.23.0/
 COPY source source
 COPY meson.build meson.build
 COPY meson_options.txt meson_options.txt
+COPY subprojects subprojects
 RUN meson build -D with_test_explicit=true --default-library=static && cd build && ninja test
