--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -8,4 +8,4 @@ COPY source source
 COPY meson.build meson.build
 COPY meson_options.txt meson_options.txt
 COPY subprojects subprojects
-RUN meson build -D with_test_explicit=true --default-library=static && cd build && ninja test
+RUN ls subprojects && meson build -D with_test_explicit=true --default-library=static && ninja test -C build
