--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,5 +1,5 @@
 FROM resin/aarch64-ubuntu
-RUN apt-get update && apt-get -y install xz-utils libxml2 gcc git pkg-config ninja-build
+RUN apt-get update && apt-get -y install xz-utils libxml2 gcc git pkg-config ninja-build python3-pip
 RUN pip3 install meson
 RUN curl -fsSLO https://github.com/ldc-developers/ldc/releases/download/v1.23.0/ldc2-1.23.0-linux-aarch64.tar.xz \
  && tar xf ldc2-1.23.0-linux-aarch64.tar.xz \
