add mir.enums and mir.symbol_table (#24)
* add mir.enums and mir.symbol_table

* fix docs

--- a/meson.build
+++ b/meson.build
@@ -11,6 +11,7 @@ sources_list = [
     'mir/bitop',
     'mir/checkedint',
     'mir/conv',
+    'mir/enums',
     'mir/functional',
     'mir/internal/memory',
     'mir/internal/utility',
@@ -21,6 +22,7 @@ sources_list = [
     'mir/primitives',
     'mir/qualifier',
     'mir/reflection',
+    'mir/string_table',
     'mir/utility',
 ]
 
