--- a/meson.build
+++ b/meson.build
@@ -16,12 +16,14 @@ sources_list = [
     'mir/ion/deser/package',
     'mir/ion/exception',
     'mir/ion/internal/data_holder',
+    'mir/ion/internal/jsonbuffer',
     'mir/ion/internal/simd',
-    'mir/ion/internal/stage4_s',
     'mir/ion/internal/stage1',
     'mir/ion/internal/stage2',
     'mir/ion/internal/stage3',
+    'mir/ion/internal/stage4_s',
     'mir/ion/lob',
+    'mir/ion/ser/package',
     'mir/ion/symbol_table',
     'mir/ion/tape',
     'mir/ion/timestamp',
