--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -7,26 +7,26 @@ jobs:
         strategy:
             matrix:
                 os: [ubuntu-latest, windows-latest, macOS-latest]
-                dc: [dmd-latest, 
-                     dmd-2.094.2, 
-                     dmd-2.093.1,
-                     dmd-2.092.1,
-                     dmd-2.091.1,
-                     dmd-2.090.1,
-                     dmd-2.089.1,
-                     dmd-2.088.1,
-                     dmd-2.087.1,
-
-                     ldc-latest, 
-                     ldc-1.24.0,
-                     ldc-1.23.0,
-                     ldc-1.22.0,
-                     ldc-1.21.0,
-                     ldc-1.20.1,
-                     ldc-1.19.0,
-                     ldc-1.18.0,
-                     ldc-1.17.0,
-                     ldc-1.17.0]
+                dc: 
+                    - dmd-latest 
+                    - dmd-2.094.2 
+                    - dmd-2.093.1
+                    - dmd-2.092.1
+                    - dmd-2.091.1
+                    - dmd-2.090.1
+                    - dmd-2.089.1
+                    - dmd-2.088.1
+                    - dmd-2.087.1
+                    - ldc-latest 
+                    - ldc-1.24.0
+                    - ldc-1.23.0
+                    - ldc-1.22.0
+                    - ldc-1.21.0
+                    - ldc-1.20.1
+                    - ldc-1.19.0
+                    - ldc-1.18.0
+                    - ldc-1.17.0
+                    - ldc-1.17.0
             exclude:
                 - { os: ubuntu-latest, dc: dmd-2.089.1 }
 
