--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -29,6 +29,7 @@ jobs:
                     - ldc-1.17.0
                 exclude:
                     - { os: ubuntu-latest, dc: dmd-2.089.1 }
+                    - { os: macOS-latest, dc: dmd-2.087.1 }
 
         runs-on: ${{ matrix.os }}
         steps:
