--- a/.github/workflows/x86.yml
+++ b/.github/workflows/x86.yml
@@ -6,7 +6,7 @@ jobs:
         name: Dub Tests
         strategy:
             matrix:
-                os: [ubuntu-latest]
+                os: [windows-latest]
                 dc: 
                     - dmd-latest 
                     - dmd-2.094.2 
@@ -26,9 +26,9 @@ jobs:
                     - ldc-1.19.0
                     - ldc-1.18.0
                     - ldc-1.17.0
-                exclude:
-                    - { os: ubuntu-latest, dc: dmd-2.089.1 }
-                    - { os: macOS-latest, dc: dmd-2.087.1 }
+#                exclude:
+#                    - { os: ubuntu-latest, dc: dmd-2.089.1 }
+#                    - { os: macOS-latest, dc: dmd-2.087.1 }
 
         runs-on: ${{ matrix.os }}
         steps:
@@ -39,10 +39,10 @@ jobs:
               with:
                   compiler: ${{ matrix.dc }}
 
-            - name: Install 32-bit libs
-              run: |
-                sudo apt update -y 
-                sudo apt install -y gcc-multilib
+#            - name: Install 32-bit libs
+#              run: |
+#                sudo apt update -y 
+#                sudo apt install -y gcc-multilib
 
             - name: Unittest with default configuration
               run: dub test -a x86
