--- a/.github/workflows/gdc.yml
+++ b/.github/workflows/gdc.yml
@@ -1,4 +1,4 @@
-name: arm64
+name: gdc
 on: [push, pull_request]
 
 jobs:
@@ -14,15 +14,8 @@ jobs:
         steps:
             - uses: actions/checkout@v2
 
-            - name: Install DUB
-              uses: dlang-community/setup-dlang@v1
-              with:
-                compiler: ${{ matrix.dc }}
-
             - name: Install GDC
-              uses: dlang-community/setup-dlang@v1
-              with:
-                compiler: ${{ matrix.dc }}
+              run: sudo apt install gdc
 
             - name: Vanilla unittest
               run: dub test -a x86_64 --compiler gdc
