--- a/.github/workflows/gdc.yml
+++ b/.github/workflows/gdc.yml
@@ -18,7 +18,10 @@ jobs:
               run: sudo apt install gdc
 
             - name: Install DUB
-              run: sudo apt install dub              
+              run: sudo apt install dub
+
+            - name: Install libcurl
+              run: sudo apt install libcurl4-gnutls-dev
 
             - name: Vanilla unittest
               run: dub test -a x86_64 --compiler gdc
