--- a/.github/workflows/gdc.yml
+++ b/.github/workflows/gdc.yml
@@ -12,10 +12,10 @@ jobs:
 
         runs-on: ${{ matrix.os }}
         steps:
-            - uses: actions/checkout@v2
-
             - name: Install DUB
-              run: sudo apt install dub
+              run: |
+                  wget https://github.com/dlang/dub/releases/download/v1.23.0/dub-v1.23.0-linux-x86_64.tar.gz
+                  tar xvf dub-v1.23.0-linux-x86_64.tar.gz
 
             - name: Install libcurl
               run: sudo apt install libcurl4-gnutls-dev
@@ -24,5 +24,5 @@ jobs:
               run: sudo apt install gdc              
 
             - name: Vanilla unittest
-              run: dub test -a x86_64 --compiler gdc -v
+              run: ./dub test -a x86_64 --compiler gdc -v
  
