--- a/.github/workflows/gdc.yml
+++ b/.github/workflows/gdc.yml
@@ -12,6 +12,13 @@ jobs:
 
         runs-on: ${{ matrix.os }}
         steps:
+            - uses: actions/checkout@v2
+
+            - name: Install D compiler
+              uses: dlang-community/setup-dlang@v1
+              with:
+                  compiler: ${{ matrix.dc }}
+          
             - name: Install DUB
               run: |
                   wget https://github.com/dlang/dub/releases/download/v1.23.0/dub-v1.23.0-linux-x86_64.tar.gz
