--- a/.github/workflows/gdc.yml
+++ b/.github/workflows/gdc.yml
@@ -31,5 +31,7 @@ jobs:
               run: sudo apt install gdc              
 
             - name: Vanilla unittest
-              run: ./dub test -a x86_64 --compiler gdc -v
- 
+              run: ./dub test -a x86_64 --compiler gdc
+
+            - name: Optimized unittest
+              run: ./dub test -a x86_64 --compiler gdc -b unittest-release
