--- a/.travis.yml
+++ b/.travis.yml
@@ -14,42 +14,23 @@ os:
 
 d:
  - ldc-beta
- - ldc-1.22.0
- - ldc-1.21.0
- - ldc-1.20.1
- - ldc-1.19.0
- - ldc-1.18.0
- - ldc-1.17.0
+ - ldc-1.24.0
  - dmd-beta
- - dmd-2.093.0
- - dmd-2.092.1
- - dmd-2.091.1
- - dmd-2.090.1
- - dmd-2.089.1
- - dmd-2.088.1
- - dmd-2.087.1
+ - dmd-2.095.0
+ - dmd-2.094.2
  - gdc
 
 matrix:
   allow_failures:
    - d: gdc
      os: osx          # no GDC for OSX
-   - d: dmd-2.089.1   # weird travis crash on Linux only, did not investigate
-   - d: dmd-beta
+   - d: dmd-beta      # DMD on arm64 not supported
      arch: arm64
-   - d: dmd-2.093.0
+   - d: dmd-2.095.0
      arch: arm64
-   - d: dmd-2.092.1
+   - d: dmd-2.094.2
      arch: arm64
-   - d: dmd-2.091.1
-     arch: arm64
-   - d: dmd-2.090.1
-     arch: arm64
-   - d: dmd-2.088.1
-     arch: arm64
-   - d: dmd-2.087.1
-     arch: arm64
-   - d: gdc
+   - d: gdc           # GDC + arm64 not supported
      arch: arm64
 
 # Note: run 64-bit tests if (arch == amd64) || (compiler is LDC)
