--- a/meson.build
+++ b/meson.build
@@ -12,17 +12,18 @@ has_cpp_headers = false
 
 sources_list = [
     'mir/ion/conv',
+    'mir/ion/deser/json',
     'mir/ion/deser/low_level',
     'mir/ion/deser/package',
     'mir/ion/exception',
     'mir/ion/internal/data_holder',
-    'mir/ion/internal/jsonbuffer',
     'mir/ion/internal/simd',
     'mir/ion/internal/stage1',
     'mir/ion/internal/stage2',
     'mir/ion/internal/stage3',
     'mir/ion/internal/stage4_s',
     'mir/ion/lob',
+    'mir/ion/ser/json',
     'mir/ion/ser/package',
     'mir/ion/symbol_table',
     'mir/ion/tape',
