--- a/source/taggedalgebraic/meson.build
+++ b/source/taggedalgebraic/meson.build
@@ -3,6 +3,7 @@ taggedalgebraic_src = [
 	'taggedalgebraic.d',
 	'taggedunion.d',
 	'visit.d',
+	'package.d'
 ]
 
 # https://github.com/mesonbuild/meson/issues/6862
